Added FOV feature

--- a/binaries/data/config/default.cfg
+++ b/binaries/data/config/default.cfg
@@ -235,6 +235,8 @@ rotate.cw = "Ctrl+LeftArrow", "Ctrl+A", Q     ; Rotate camera clockwise around t
 rotate.ccw = "Ctrl+RightArrow", "Ctrl+D", E   ; Rotate camera anticlockwise around terrain
 rotate.wheel.cw = "Shift+WheelUp", MouseX1    ; Rotate camera clockwise around terrain (stepped control)
 rotate.wheel.ccw = "Shift+WheelDown", MouseX2 ; Rotate camera anticlockwise around terrain (stepped control)
+fov.increase = "Ctrl+L"                       ; Increase FOV
+fov.decrease = "Ctrl+I"                       ; Decrease FOV
 pan = MouseMiddle                             ; Enable scrolling by moving mouse
 left = A, LeftArrow                           ; Scroll or rotate left
 right = D, RightArrow                         ; Scroll or rotate right
@@ -584,6 +586,8 @@ rotate.x.smoothness = 0.5
 rotate.y.smoothness = 0.3
 near = 2.0                        ; Near plane distance
 far = 4096.0                      ; Far plane distance
-fov = 45.0                        ; Field of view (degrees), lower is narrow, higher is wide
+fov = 40.0                        ; Field of view (degrees), lower is narrow, higher is wide
 height.smoothness = 0.5
 height.min = 16
+fov.max = 70
+fov.min = 30
